[project]
  name = "pulumi_huaweicloud"
  description = "A Pulumi package for creating and managing Huaweicloud cloud resources."
  dependencies = ["parver>=0.2.1", "pulumi>=3.165.0,<4.0.0", "semver>=2.8.1", "typing-extensions>=4.11,<5; python_version < \"3.11\""]
  keywords = ["pulumi", "huaweicloud", "category/cloud"]
  readme = "README.md"
  requires-python = ">=3.9"
  version = "0.0.13"
  [project.license]
    text = "Apache-2.0"
  [project.urls]
    Homepage = "https://huaweicloud-pulumi-provider.readthedocs.io"
    Repository = "https://github.com/masikrus/pulumi-huaweicloud"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumi_huaweicloud = ["py.typed", "pulumi-plugin.json"]
